ensure left nav toggle is visible on small breakpoint

--- a/ui/client-react/src/components/nav/leftNav.scss
+++ b/ui/client-react/src/components/nav/leftNav.scss
@@ -89,8 +89,8 @@ $left-nav-horizontal-icon-border-color: $color32;
         display: block;
     }
     .leftNav.open {
-        max-width: calc(100% - 36px);
-        width: 300px;
+        width: calc(100% - 36px);
+        //width: 300px;
         transition: all 100ms ease;
         .topLinks .leftNavLink {
             padding: 10px 0;
@@ -474,6 +474,7 @@ div.leftNavTooltip {
         }
         .main {
             position: absolute;
+            left: calc(100% - 36px);;
         }
 
         transform: translate3d(300px, 0, 0);
